# learn-design-patterns

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/creational/: AbstractFactory.h  Builder.h  FactoryMethod.h  Prototype.h  SimpleFactory.h  Singleton.h  simpleFactory.h
include/structual/: Adapter.h  Bridge.h
src/: main.cpp
